Setup EnteryPoint for the Application.

--- a/Little-Wooden-Engine/Little-Wooden-Engine.vcxproj.filters
+++ b/Little-Wooden-Engine/Little-Wooden-Engine.vcxproj.filters
@@ -15,12 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Test.h">
+    <ClInclude Include="src\LWE\Core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LWE\Application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LittleWoodenEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LWE\EntryPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Test.cpp">
+    <ClCompile Include="src\LWE\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
