--- a/Little-Wooden-Engine/Little-Wooden-Engine.vcxproj.filters
+++ b/Little-Wooden-Engine/Little-Wooden-Engine.vcxproj.filters
@@ -27,9 +27,15 @@
     <ClInclude Include="src\LWE\EntryPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\LWE\Log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\LWE\Application.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LWE\Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
