--- a/Little-Wooden-Engine/Little-Wooden-Engine.vcxproj.filters
+++ b/Little-Wooden-Engine/Little-Wooden-Engine.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="LittleWooden">
+      <UniqueIdentifier>{FF969D0E-EBF9-2CB3-947F-656980C1F835}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\LWE\Core.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\LittleWooden.h" />
+    <ClInclude Include="src\LittleWooden\Application.h">
+      <Filter>LittleWooden</Filter>
     </ClInclude>
-    <ClInclude Include="src\LWE\Application.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\LittleWooden\Core.h">
+      <Filter>LittleWooden</Filter>
     </ClInclude>
-    <ClInclude Include="src\LittleWoodenEngine.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\LittleWooden\EntryPoint.h">
+      <Filter>LittleWooden</Filter>
     </ClInclude>
-    <ClInclude Include="src\LWE\EntryPoint.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\LWE\Log.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\LittleWooden\Log.h">
+      <Filter>LittleWooden</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\LWE\Application.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\LittleWooden\Application.cpp">
+      <Filter>LittleWooden</Filter>
     </ClCompile>
-    <ClCompile Include="src\LWE\Log.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\LittleWooden\Log.cpp">
+      <Filter>LittleWooden</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
