--- a/LittleWooden/LittleWooden.vcxproj.filters
+++ b/LittleWooden/LittleWooden.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="src\LittleWooden\Log.hpp">
       <Filter>LittleWooden</Filter>
     </ClInclude>
+    <ClInclude Include="src\lwpch.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\LittleWooden\Application.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\LittleWooden\Log.cpp">
       <Filter>LittleWooden</Filter>
     </ClCompile>
+    <ClCompile Include="src\lwpch.cpp" />
   </ItemGroup>
 </Project>
