added glfw submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "LittleWooden/vendor/spdlog"]
 	path = LittleWooden/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "LittleWooden/vendor/GLFW"]
+	path = LittleWooden/vendor/GLFW
+	url = https://github.com/Dylan-Littlewood/glfw
