--- a/LittleWooden/LittleWooden.vcxproj.filters
+++ b/LittleWooden/LittleWooden.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="LittleWooden\Events">
       <UniqueIdentifier>{038EC18F-6FEF-9E9D-F85C-E54F64BDD55C}</UniqueIdentifier>
     </Filter>
+    <Filter Include="LittleWooden\ImGui">
+      <UniqueIdentifier>{690F4190-55F3-01E6-BE53-FC38AA56EC67}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\LittleWooden\Events\MouseEvent.hpp">
       <Filter>LittleWooden\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\LittleWooden\ImGui\ImGuiLayer.hpp">
+      <Filter>LittleWooden\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\LittleWooden\Layer.hpp">
       <Filter>LittleWooden</Filter>
     </ClInclude>
@@ -53,10 +62,16 @@
       <Filter>Platform\Windows</Filter>
     </ClInclude>
     <ClInclude Include="src\lwpch.hpp" />
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\LittleWooden\Application.cpp">
       <Filter>LittleWooden</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LittleWooden\ImGui\ImGuiLayer.cpp">
+      <Filter>LittleWooden\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\LittleWooden\Layer.cpp">
       <Filter>LittleWooden</Filter>
@@ -71,5 +86,8 @@
       <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\lwpch.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
