--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -13,7 +13,6 @@ DockId=0x00000004,0
 Pos=0,38
 Size=322,461
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Dear ImGui Style Editor]
 Pos=60,60
@@ -41,9 +40,7 @@ Size=1280,701
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=164,305 Size=1280,682 Split=Y
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,461 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=322,701 Selected=0xE927CF2F
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=956,701 CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,219 Selected=0xBF126D42
+DockSpace   ID=0x3BC79352 Pos=164,305 Size=1280,682 Split=Y
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,461 CentralNode=1
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,219 Selected=0xBF126D42
 
