--- a/LittleWooden/LittleWooden.vcxproj
+++ b/LittleWooden/LittleWooden.vcxproj
@@ -155,7 +155,9 @@
     <ClInclude Include="src\LittleWooden\LayerStack.hpp" />
     <ClInclude Include="src\LittleWooden\Log.hpp" />
     <ClInclude Include="src\LittleWooden\MouseButtonCodes.hpp" />
+    <ClInclude Include="src\LittleWooden\Renderer\GraphicsContext.hpp" />
     <ClInclude Include="src\LittleWooden\Window.hpp" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.hpp" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.hpp" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.hpp" />
     <ClInclude Include="src\lwpch.hpp" />
@@ -575,6 +577,7 @@
     <ClCompile Include="src\LittleWooden\Layer.cpp" />
     <ClCompile Include="src\LittleWooden\LayerStack.cpp" />
     <ClCompile Include="src\LittleWooden\Log.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\lwpch.cpp">
@@ -595,4 +598,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
