--- a/LittleWooden/LittleWooden.vcxproj
+++ b/LittleWooden/LittleWooden.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="src\LittleWooden\Log.hpp" />
     <ClInclude Include="src\LittleWooden\MouseButtonCodes.hpp" />
     <ClInclude Include="src\LittleWooden\Renderer\GraphicsContext.hpp" />
+    <ClInclude Include="src\LittleWooden\Renderer\Shader.hpp" />
     <ClInclude Include="src\LittleWooden\Window.hpp" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.hpp" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.hpp" />
@@ -577,6 +578,7 @@
     <ClCompile Include="src\LittleWooden\Layer.cpp" />
     <ClCompile Include="src\LittleWooden\LayerStack.cpp" />
     <ClCompile Include="src\LittleWooden\Log.cpp" />
+    <ClCompile Include="src\LittleWooden\Renderer\Shader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
