--- a/LittleWooden/LittleWooden.vcxproj.filters
+++ b/LittleWooden/LittleWooden.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="src\LittleWooden\Renderer\GraphicsContext.hpp">
       <Filter>src\LittleWooden\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\LittleWooden\Renderer\Shader.hpp">
+      <Filter>src\LittleWooden\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\LittleWooden\Window.hpp">
       <Filter>src\LittleWooden</Filter>
     </ClInclude>
@@ -1335,7 +1338,9 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\LittleWooden\Renderer\Shader.hpp" />
+    <ClInclude Include="src\LittleWooden\Renderer\Buffer.hpp" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.hpp" />
+    <ClInclude Include="src\LittleWooden\Renderer\Renderer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\LittleWooden\Application.cpp">
@@ -1356,6 +1361,9 @@
     <ClCompile Include="src\LittleWooden\Log.cpp">
       <Filter>src\LittleWooden</Filter>
     </ClCompile>
+    <ClCompile Include="src\LittleWooden\Renderer\Shader.cpp">
+      <Filter>src\LittleWooden\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
@@ -1368,6 +1376,8 @@
     <ClCompile Include="src\lwpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\LittleWooden\Renderer\Shader.cpp" />
+    <ClCompile Include="src\LittleWooden\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
+    <ClCompile Include="src\LittleWooden\Renderer\Renderer.cpp" />
   </ItemGroup>
 </Project>
