Added Timestep for use of Delta Time.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -44,6 +44,11 @@ Pos=110,119
 Size=100,48
 Collapsed=0
 
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,256
+Collapsed=0
+
 [Docking][Data]
 DockSpace   ID=0x3BC79352 Pos=164,305 Size=1280,682 Split=Y
   DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,461 CentralNode=1
