Moved OpenGL shader implementation to OpenGLShader class + added more uniform functions

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -49,6 +49,11 @@ Pos=60,60
 Size=338,256
 Collapsed=0
 
+[Window][Settings]
+Pos=60,60
+Size=380,147
+Collapsed=0
+
 [Docking][Data]
 DockSpace   ID=0x3BC79352 Pos=164,305 Size=1280,682 Split=Y
   DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,461 CentralNode=1
