--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Example: Log]
-Pos=0,501
-Size=1280,219
+Pos=330,198
+Size=619,315
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
 Pos=947,13
@@ -15,7 +14,8 @@ Size=322,461
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=60,60
+ViewportPos=120,224
+ViewportId=0x6D551092
 Size=353,714
 Collapsed=0
 
@@ -30,7 +30,7 @@ Size=500,440
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=97,150
+Pos=189,249
 Size=466,391
 Collapsed=0
 
@@ -50,12 +50,25 @@ Size=338,256
 Collapsed=0
 
 [Window][Settings]
-Pos=658,71
+Pos=634,35
 Size=380,147
 Collapsed=0
 
+[Window][Same title as another window##1]
+ViewportPos=129,90
+ViewportId=0x78C07CE7
+Size=450,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=26,33
+Size=450,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=40,137
+Size=247,48
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=164,305 Size=1280,682 Split=Y
-  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,461 CentralNode=1
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,219 Selected=0xBF126D42
 
