Started work on profileing setting up basic timer class with output to ImGui

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -9,7 +9,7 @@ Size=619,315
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=934,238
+Pos=953,163
 Size=322,461
 Collapsed=0
 
@@ -50,7 +50,7 @@ Size=338,256
 Collapsed=0
 
 [Window][Settings]
-Pos=938,19
+Pos=943,12
 Size=322,208
 Collapsed=0
 
@@ -68,6 +68,11 @@ Collapsed=0
 [Window][###AnimatedTitle]
 Pos=40,137
 Size=247,48
+Collapsed=0
+
+[Window][Profiling]
+Pos=945,325
+Size=261,99
 Collapsed=0
 
 [Docking][Data]
